Calendar Page and Homepage Twitter Tweaks - Calendar: fixed markup so header background image worked - Calendar: added subtle background image for the calendar - Homage page twitter: added subtle background shadow to twitter text for increased readability

--- a/web/app/themes/teamjb/assets/styles/components/_calendar.scss
+++ b/web/app/themes/teamjb/assets/styles/components/_calendar.scss
@@ -120,7 +120,7 @@
 
 
 body {
-	background: $color-teamjb-honeygold;
+	//background: $color-teamjb-honeygold;
 	//background: -moz-linear-gradient(-45deg, #cebe29 0%, #9b1f50 33%, #2989d8 71%, #89b4ff 91%);
 	//background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#cebe29), color-stop(33%,#9b1f50), color-stop(71%,#2989d8), color-stop(91%,#89b4ff));
 	//background: -webkit-linear-gradient(-45deg, #cebe29 0%,#9b1f50 33%,#2989d8 71%,#89b4ff 91%);
